emma (0.2) unstable; urgency=low
  Sun, 26 Feb 2006 01:45:54 +0100
  * table view
  * query result popup
  * order by click
  * field condition filter
  * local regex search
  * append row
  * delete row
  * edit row
  Sun, 26 Feb 2006 14:05:56 +0100
  * fixed database/table order
  * show tables while loading their descriptions
  * process events in show_sql_log()
  * update table view after first nb-page change
  * db-tables view
  * refresh/truncate/drop table
  * refresh db
  * new table
  * drop db
  * new database
  * refresh host
  * delete host
  * new host
  * modify host
  Wed, 01 Mar 2006 19:48:49 +0100
  * load query
  * save query
  * mysql_ping to connected hosts
  * save workspace
  * load workspace
  * first easy pickly/unpickle
  Fri, 03 Mar 2006 18:59:23 +0100
  * save result
 -- Florian Schmidt <schmidt_florian@gmx.de>  

emma (0.1) unstable; urgency=low
  * copied yamysqlfront.glade to emma.glade
  * connect first signal handlers in menubar
    
 -- Florian Schmidt <schmidt_florian@gmx.de>  Sun, 15 Jan 2006 17:50:07 +0100
